# StudioPop

./: .gitignore  LICENSE  README.md  gradle.properties  settings.gradle.kts
.github/: CODEOWNERS
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/mingeek/studiopop/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/java/com/mingeek/studiopop/: AppContainer.kt  MainActivity.kt
app/src/main/java/com/mingeek/studiopop/data/ai/: AiAssist.kt  DefaultAiAssist.kt  EditSuggestion.kt  GeminiChapterPicker.kt  GeminiTagPicker.kt  GeminiToneAnalyzer.kt  LutMatcher.kt  ToneEstimator.kt  VideoAnalysis.kt  YoutubePackage.kt
app/src/main/java/com/mingeek/studiopop/data/audio/: AnalysisCache.kt  AudioAnalysis.kt  AudioAnalysisService.kt  AudioAnalyzers.kt  BeatBus.kt  BeatDetectorImpl.kt  Ducking.kt  LoudnessAnalyzerImpl.kt  WaveformSamplerImpl.kt
app/src/main/java/com/mingeek/studiopop/data/auth/: AuthTokenStore.kt  GoogleAuthManager.kt
app/src/main/java/com/mingeek/studiopop/data/caption/: AudioChunker.kt  AudioExtractor.kt  CaptionWordStore.kt  ChunkedTranscriber.kt  PcmDecoder.kt  SpeakerClusterer.kt  SpeechToText.kt  Srt.kt  SttRegistry.kt  VoskModelManager.kt  VoskSpeakerModelManager.kt  VoskTranscriber.kt  WhisperApiEngine.kt  WhisperClient.kt  WhisperCppEngine.kt  WhisperCppModelManager.kt
app/src/main/java/com/mingeek/studiopop/data/design/: AssetLibraries.kt  AssetSource.kt  BuiltinFontPacks.kt  BuiltinLuts.kt  BuiltinThemes.kt  ColorPalette.kt  CubeLut.kt  CubeLutLoader.kt  DesignTokens.kt  FontPack.kt  SyntheticCubeLuts.kt  ThemePack.kt  TypefaceLoader.kt
app/src/main/java/com/mingeek/studiopop/data/editor/: AnimatedTextOverlay.kt  BombCaptionExport.kt  CameraMatrixEffect.kt  CaptionOverlay.kt  CaptionStyle.kt  CenterChannelAudioProcessor.kt  DuckingAudioProcessor.kt  EffectStackShortsOverlays.kt  EffectStackSpeedRamp.kt  EffectStackVideoEffects.kt  FaceTracker.kt  FadeOverlay.kt  FrameStrip.kt  ImageStickerOverlay.kt  LutColorEffect.kt  MosaicBlockOverlay.kt  SilenceAudioGenerator.kt  Timeline.kt  TimelineSerializer.kt  VideoEditor.kt  VolumeAudioProcessor.kt
app/src/main/java/com/mingeek/studiopop/data/effects/: EffectCategory.kt  EffectDefinition.kt  EffectInstance.kt  EffectParameter.kt  EffectRegistry.kt  EffectRenderer.kt  EffectStackResolver.kt
app/src/main/java/com/mingeek/studiopop/data/keyframe/: Easing.kt  Keyframe.kt
app/src/main/java/com/mingeek/studiopop/data/media/: AssetBackfillPublisher.kt  MediaStoreSrtPublisher.kt  MediaStoreVideoPublisher.kt
app/src/main/java/com/mingeek/studiopop/data/project/: AppDatabase.kt  ProjectDao.kt  ProjectEntities.kt  ProjectRepository.kt
app/src/main/java/com/mingeek/studiopop/ui/: AppNavHost.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/mingeek/studiopop/: ExampleUnitTest.kt
docs/: phase1-oauth-setup.md  phase2-caption-setup.md  phase3-editor-setup.md  phase4-thumbnail-shorts.md  phase5-projects.md  phase6-editor-v2.md  phase7-multilayer.md  phase8-stt-engines.md  phase9-whisper-cpp-ndk.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+92 files in other folders)
